--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,12 +7,14 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/spinDancer.js"></script>
+    <script src="src/growingDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="SpinDancer">add a spinning narwhal</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="GrowingDancer">add a growing dolphin</a>
       </div>
     <script src="src/init.js"></script>
   </body>
