--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,6 +8,7 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/spinDancer.js"></script>
     <script src="src/growingDancer.js"></script>
+    <script src="src/moveAllToLeft.js"></script>
   </head>
   <body>
     <div class="topbar">
