--- a/dancefloor.html
+++ b/dancefloor.html
@@ -9,6 +9,7 @@
     <script src="src/spinDancer.js"></script>
     <script src="src/growingDancer.js"></script>
     <script src="src/moveAllToLeft.js"></script>
+    <script src="src/sharkDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
@@ -16,6 +17,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="SpinDancer">add a spinning narwhal</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="GrowingDancer">add a growing dolphin</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="SharkDancer">add a scary fish</a>
       </div>
     <script src="src/init.js"></script>
   </body>
