Commit before parting

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,6 +10,7 @@
     <script src="src/growingDancer.js"></script>
     <script src="src/moveAllToLeft.js"></script>
     <script src="src/sharkDancer.js"></script>
+    <script src="src/dancersGoToMouse.js"></script>
   </head>
   <body>
     <div class="topbar">
