--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -7,16 +7,22 @@
   <script src="lib/mocha/mocha.js"></script>
   <script src="lib/chai/chai.js"></script>
   <script src="lib/sinon/sinon.js"></script>
+
   <script>
     mocha.setup('bdd');
     window.expect = chai.expect;
     $(function() {
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
     });
-  </script>
+    </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/growingDancerSpec.js"></script>
+  <script src="spec/sharkDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/moveAllToLeft.js"></script>
+  <script src="src/growingDancer.js"></script>
+  <script src="src/sharkDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
